@@ -1,3 +1,8 @@
+2006-09-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:  Make sure we only request tile 0.7 as 0.6 doesn't
+	               work with the panedwindow any more.
+
 2006-09-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:   FR 681734 - log memos to mbox file for later
